2011-03-08  Murray Cumming  <murrayc@murrayc.com>

	Remove some unnecessary padding/borders around the main window.

	* glom/box_withbuttons.cc: Remove the border, because it is not useful.
	It would be for the parent widget to decide that.
	* glom/mode_data/flowtablewithfields.[h|cc]: add_group(): Add a with_indent
	optional parameter.
	* glom/mode_data/box_data_details.cc: create_layout(): Have no indent on
	top-level groups.

2011-02-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the CSV import test.

	* tests/import/test_parsing.cc: Correct the number of expected tokens.
	This was previously just the number that was (incorrectly) parsed before.

2011-02-26  Murray Cumming  <murrayc@murrayc.com>

	CSV Import: Fix quoted-newline detection, so we don't drop rows.

	* glom/import_csv/csv_parser.[h|cc]: on_idle_parse(): Make in_quotes a 
	member variable, initialized in clear(), so we remember it across calls to 
	on_idle_parse(), instead of thinking that we are in quotes just because we 
	are parsing arbitrary chunks of bytes that look that way individually.
	
	This fixes bug #637529 (Darmon Xavier), so all rows should be imported 
	instead of dropping some in the middle.

2011-01-06  Murray Cumming  <murrayc@murrayc.com>

	tests: Link to all necessary libraries.

	* Makefile_libglom.am: Define libglom_all_libs to avoid duplication.
	* Makefile_glom.am: Use libglom_all_libs instead of repeating.
	* Makefile_tests.am: Use libglom_all_libs to explicitly link against the 
	dependencies of libglom. This seems to have been automatic with the linker in 
	previous versions of Ubuntu, but not with Ubuntu Natty.

2011-02-25  Murray Cumming  <murrayc@murrayc.com>

	Adapt to libgdamm API change.

	* glom/libglom/connectionpool.cc:
	* glom/libglom/db_utils.cc: Adapt to the libgdamm change to use vector 
	instead of list.

2011-02-25  Murray Cumming  <murrayc@murrayc.com>

	Avoid GTK+ warning when clicking on the list button.
